fix hero section grid by spacing and reduced page container left and right padding

--- a/styles/landingPage.module.css
+++ b/styles/landingPage.module.css
@@ -2,7 +2,7 @@
 /* hero section */
 .heroContainer{
     text-align: left;
-    padding:1.5rem 3rem;  
+    padding:1.5rem 1.5rem; 
     
 }
 
@@ -32,7 +32,7 @@
 .servicesContainer{
     text-align: center;
     margin-top:5rem ;
-    padding:1.5rem 3rem;
+    padding:1.5rem 1.5rem;
     
 }
 
@@ -81,8 +81,8 @@
 .footer{
     background-color:#000000;
     color:#D6E4E5;
-    margin-top:5rem ;
-    padding:1.5rem 3rem;
+    margin-top:50px ;
+    padding:1.5rem 1.5rem;
     align-items: center;
    
      
